# arena

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  versions.json
.claude/: CLAUDE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: report-arena-failure.yml  request-trial.yml  submit-agent.yml
.github/PULL_REQUEST_TEMPLATE/: agent-submission.md
.github/workflows/: ci.yml  codeql.yml  documentation.yml  scheduled-matches.yml  validate-community-agents.yml
agents/community/: README.md
agents/official/: README.md
docs/: agents-scenarios.md  api-reference.md  architecture.md  behavior-profiles.md  get-involved.md  glossary.md  index.md  latest-reports.md  local-execution.md  report-schema.md  runners.md  security-policy.md  submit-agent.md
examples/manifests/: raw-python-issue-triager.yaml
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/agents-scenarios/: index.html
latest/api-reference/: index.html
latest/architecture/: index.html
latest/behavior-profiles/: index.html
latest/get-involved/: index.html
latest/glossary/: index.html
latest/latest-reports/: index.html
latest/local-execution/: index.html
latest/report-schema/: index.html
latest/runners/: index.html
latest/search/: search_index.json
latest/security-policy/: index.html
latest/submit-agent/: index.html
reports/: README.md  latest.json  leaderboard.json
scenarios/github-maintainer-dungeon/: scenario.yaml
scripts/: generate_report_samples.py  render_agents_scenarios_page.py  render_latest_reports_page.py
tests/: report_fixtures.py  test_cli.py  test_cli_agents_list.py  test_cli_agents_validate.py  test_cli_reports_defeat_issues.py  test_cli_run.py  test_cli_scaffold_agent.py  test_cli_scenarios.py  test_fixtures.py  test_github_maintainer_dungeon_scenario.py  test_integrations_adapter.py  test_integrations_audit.py  test_integrations_ci_debug_agent_e2e.py  test_integrations_contract.py  test_integrations_decision.py  test_integrations_emit.py  test_integrations_langgraph_docs_agent_e2e.py  test_integrations_models.py  test_integrations_official_agent_e2e.py  test_integrations_parser.py  test_llm_mode.py  test_manifest_loader.py  test_manifest_schema.py  test_official_mock_malicious_agent.py  test_registry_discovery.py  test_release_agent_e2e.py  test_render_agents_scenarios_page.py  test_render_latest_reports_page.py  test_reports_defeat.py  test_reports_generate.py  test_reports_github_issues.py  test_reports_index.py  test_reports_issue_payload.py  test_reports_redaction.py  test_reports_schema_version.py  test_reports_scoring.py  test_reports_snapshots.py  test_runner_docker.py  test_runner_match.py  test_runner_noop.py  (+4 more)
(+131 files in other folders)
