[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arena"
version = "0.0.0"
description = "Governance trial arena for AI agents — agents attempt actions, agent-assembly governs, every match leaves a report."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "typer>=0.27.0,<1.0.0",
    "rich>=15.0.0,<16.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "pyyaml>=6.0.3,<7.0",
    "langgraph>=1.2.9",
    "pydantic-ai-slim>=2.11.0,<3.0.0",
]

[project.scripts]
aasm-arena = "arena.cli:app"

[project.urls]
Homepage = "https://github.com/ai-agent-assembly/arena"
Repository = "https://github.com/ai-agent-assembly/arena"

[dependency-groups]
dev = [
    "pytest>=9.1.1,<10.0.0",
    "ruff>=0.15.21,<1.0.0",
    "mypy>=2.3.0,<3.0.0",
    "types-pyyaml>=6.0.12.20260518,<7.0",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.7.6,<10",
    "mkdocstrings>=1.0.6,<2",
    "mkdocstrings-python>=2.0.5,<3",
    "mike>=2.2.0,<3",
    "mkdocs-autorefs>=1.4.4,<2",
    "mkdocs-git-authors-plugin>=0.10.0,<1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.3,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/arena"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["arena"]
strict = true
